--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 	</head>
 	<body>
 		<h1>Angular2 - Starter</h1>
-		<my-app>Loading...</my-app>
+		<my-body>Loading...</my-body>
 	</body>
 </html>
